# reason

./: .gitignore  .gitmodules  README.md  lark-install.sh  pyproject.toml  setup.py  vampire-alias.sh  vampire-install.sh  vampire.man
.github/workflows/: reason-check.yml
examples/: example.py  proof_checker.py
examples/basic/: example.rsn  example2.rsn  fun_def.rsn  hello.rsn  hello2.rsn  ind.rsn  int.rsn  no_cycles.rsn  prod.rsn  sum.rsn  tuples.rsn  zfc_axioms.rsn  zfc_simple_lemmas.rsn
ide/pycharm/: compress.sh
kernel/learn/: fun.ml
knowledge/: README.md
notebooks/: example.ipynb  formula_graph.py  grammar.py  graph.py  language.py  lark.ipynb  program.py  proof_exp.py  reason.lark  research.ipynb  research.py  skolem.py  tptp.py  well_formed.py  zfc.ipynb  zfc.py  zfc_v2.py
reason/core/: __init__.py  fof.py  fof_old.py  fof_types.py  interpreter.py  language.py  tautology.py  theory.py  theory_v1.py  transform.py  unique_repr.py
reason/interpreter/: __init__.py  context_exps.py  theory_exps.py
reason/parser/: __init__.py  lark.py  tptp.py  tree.py  utils.py
reason/printer/: __init__.py
reason/scripts/: main.py  reason.py
reason/tools/: binary.py  logger.py  unique_repr.py
reason/vampire/: __init__.py  translator.py
tests/: test_parser.py  test_theory.py  test_tree.py
tests/core/: test_fof.py  test_interpreter.py  test_theory.py
tests/parser/: test_parser.py  test_tptp.py  test_tree.py
tests/printer/: test_printer.py
tests/tools/: test_unique_repr.py
theories/ZFC/: zfc-axioms.rsn  zfc-no-proof-facts.rsn  (+2 more)
theory/: README.md
(+35 files in other folders)
