[project]
name = "reason"
version = "0.1.0"
description = "First Order Logic System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.19.0",
    "lark",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
]

[tool.uv.sources]
lark = { path = "repositories/lark" }

[dependency-groups]
dev = [
    "taskipy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.taskipy.tasks]
format = {cmd = "uvx ruff format reason", help = "Format Python code base"}
test = {cmd = 'python -m unittest discover -s tests', help = "Run test"}


